# Pico-I2C-LCD

./: CMakeLists.txt  LCD_I2C.cpp  LCD_I2C.hpp  LICENSE  README.md  main.cpp
.github/: FUNDING.yml
examples/: CMakeLists.txt  pico_sdk_import.cmake
examples/16x2-Display/: CMakeLists.txt  main.cpp
examples/20x4-Display/: CMakeLists.txt  main.cpp
